--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -10,49 +10,51 @@ jobs:
     if: github.event.repository.owner.id == github.event.sender.id
 
     steps:
-    - uses: actions/checkout@v2
-    - name: 初始化Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-    - name: 上传
-      run: |
-        pip install -r requirements.txt
+      - uses: actions/checkout@v2
+      - name: 初始化Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.7
+      - name: 上传
+        run: |
+          pip install -r requirements.txt
 
-        corpid='${{ secrets.CORPID }}'
-        secret='${{ secrets.SECRET }}'
-        agentid='${{ secrets.AGENTID}}'
-        toparty='${{ secrets.TOPARTY}}'
+          corpid='${{ secrets.CORPID }}'
+          secret='${{ secrets.SECRET }}'
+          agentid='${{ secrets.AGENTID}}'
+          toparty='${{ secrets.TOPARTY}}'
+          touser='${{ secrets.TOUSER}}'
 
-        user='${{ secrets.USER }}'
-        pwd='${{ secrets.PASSWD }}'
+          user='${{ secrets.USER }}'
+          pwd='${{ secrets.PASSWD }}'
 
-        user_list=()
-        pwd_list=()
-        for u in ${user[*]}
-        do
-        user_list[${#user_list[*]}]=${u}
-        done
-        for p in ${pwd[*]}
-        do
-        pwd_list[${#pwd_list[*]}]=${p}
-        done
-        user_num=${#user_list[*]}
-        pwd_num=${#pwd_list[*]}
-        if [ $user_num != $pwd_num ];then
-        echo "账号和密码个数不对应"
-        exit 1
-        else
-        echo "共有 $user_num 个账号，开始上传bug"
-        fi
-        for ((i=0;i<$user_num;i++))
-        do
-        python3 bug_upload.py <<EOF
-        ${corpid}
-        ${secret}
-        ${agentid}
-        ${toparty}
-        ${user_list[$i]}
-        ${pwd_list[$i]}
-        EOF
-        done
+          user_list=()
+          pwd_list=()
+          for u in ${user[*]}
+          do
+          user_list[${#user_list[*]}]=${u}
+          done
+          for p in ${pwd[*]}
+          do
+          pwd_list[${#pwd_list[*]}]=${p}
+          done
+          user_num=${#user_list[*]}
+          pwd_num=${#pwd_list[*]}
+          if [ $user_num != $pwd_num ];then
+          echo "账号和密码个数不对应"
+          exit 1
+          else
+          echo "共有 $user_num 个账号，开始上传bug"
+          fi
+          for ((i=0;i<$user_num;i++))
+          do
+          python3 bug_upload.py <<EOF
+          ${corpid}
+          ${secret}
+          ${agentid}
+          ${toparty}
+          ${touser}
+          ${user_list[$i]}
+          ${pwd_list[$i]}
+          EOF
+          done
