--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -19,5 +19,5 @@ inputs:
   events: # 触发器配置
     - timer: # 定时触发器
         parameters:
-          cronExpression: '* 30 18 * * 3 *'
+          cronExpression: '0 30 18 * * 3 *'
           enable: true
